main-async inference - not working yet - WIP

--- a/MNIST_CNN/Makefile
+++ b/MNIST_CNN/Makefile
@@ -1,10 +1,17 @@
 CC=g++
 CFLAGS=-Wall -Wextra -g -fopenmp
 LDFLAGS=-lpthread -lhailort
-SCR=inference.cpp
-TARGET=inference
+SCR_SYNC=inference.cpp
+SCR_ASYNC=inference_async.cpp
+TARGET_SYN=inference
+TARGET_ASYNC=inference_async
 
 .PHONY: all
 
-all:
-	$(CC) $(CFLAGS) $(SCR) $(LDFLAGS) -o $(TARGET)
+all: sync async	
+
+sync:
+	$(CC) $(CFLAGS) $(SCR_SYNC) $(LDFLAGS) -o $(TARGET_SYN)
+
+async:
+	$(CC) $(CFLAGS) $(SCR_ASYNC) $(LDFLAGS) -o $(TARGET_ASYNC)
