--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ yolov8/models
 yolov8/datasets
 yolov8/build/
 yolov8/inference_hailo8
+yolov8/hailo8_inference/inference_hailo8
+yolov8/hailo8_inference
