main-Evalution of Python and Hailo8 models on the test set

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,9 @@
         "thread": "cpp",
         "cfenv": "cpp",
         "cinttypes": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "hash_map": "cpp",
+        "span": "cpp",
+        "valarray": "cpp"
     }
 }
