--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ yolov8/build/
 yolov8/inference_hailo8
 yolov8/hailo8_inference/inference_hailo8
 yolov8/hailo8_inference
+yolov8/evaluation_hailo8
