main-Licence plate detection model trained with quanztization aware training converted to HEF

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ yolov8/inference_hailo8
 yolov8/hailo8_inference/inference_hailo8
 yolov8/hailo8_inference
 yolov8/evaluation_hailo8
+yolov8/yolov8m.har
